<resources>
    <string name="swiftp_name">FTP Server</string>
    <string name="swiftp_name_free">FTP Server (Free)</string>
    <string name="swiftp_name_demo">FTP Server (Demo)</string>
    <string name="running_label">FTP Server</string>
    <string name="running_summary_stopped">Toggle the state of the ftp server</string>
    <string name="running_summary_started">at %s</string>
    <string name="running_summary_failed">
        Failed to start the FTP server, not connected to the local network (wifi or ethernet)?
    </string>
    <string name="running_summary_failed_to_get_ip_address">
        Failed to start the FTP server, unable to get IP address
    </string>
    <string name="market_version_label">Market version</string>
    <string name="market_version_summary">
        This is the FTP Server Demo version.
        Support development by getting the FTP Server from the android market.
        Click here to go to the market.
    </string>
    <string name="settings_label">Settings</string>
    <string name="user_label">User</string>
    <string name="login_settings_label">Login settings...</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="show_password_label">Display password</string>
    <string name="username_validation_error">
        The username must consist of 1 or more alphanumeric characters.
        No other characters are allowed.
    </string>
    <string name="password_validation_error">
        The password must consist of 1 or more alphanumeric characters.
        No other characters are allowed.
    </string>
    <string name="allow_anonymous_label">Allow anonymous login</string>
    <string name="anonymous_summary">Anonymous logins are only allowed read access</string>
    <string name="advanced_settings_label">Advanced settings...</string>
    <string name="port_number_label">Port Number</string>
    <string name="port_validation_error">The port number must be in the range 1 to 65535.</string>
    <string name="chroot_label">Stay in folder</string>
    <string name="accept_wifi_label">Accept connection from wifi</string>
    <string name="wakelock_label">Keep device awake (full CPU speed)</string>
    <string name="writeExternalStorage_label">Writing external storage</string>
    <string name="extra_label">Extra</string>
    <string name="help_label">Help...</string>
    <string name="about_label">About...</string>
    <string name="help_dlg_title">FTP Server Help</string>
    <string name="help_dlg_message">\
Thanks for using FTP Server (SwiFTP)! Here are some brief usage instructions. More
information can be found at http://ppareit.github.com/swiftp/.\n\n\
\
This program allows you to run an ftp server on your android device. This means that any
program can access the files on your device while the ftp server is running. For example,
entering \'ftp://...\' in the firefox url bar will allow you to browse the files on your
device from a desktop pc or a laptop.\n\n
\
By default, the user name and password are both \'ftp\', you should change them. You use
this username and password when accessing the server.\n\n
\
There is a configuration option (\"keep phone awake\") that fixes a problem where
file transfers go slow or stop completely when the phone sleeps. If you have this
problem, check this box and restart the program. Your phone will stay awake as long as
the server is running.\n\n
\
For power and security reasons, it is recommended that the server be stopped after use.\n\n\
\
If something is not working the way you expect it to, please report it to Pieter Pareit
(pieter.pareit@gmail.com).\n\n\
\
The development of this open source program is supported by buying this program through
the google play store. You can follow the development at https://github.com/ppareit/swiftp .
To have an idea on the features that will be implemented, see the issue tracker at
https://github.com/ppareit/swiftp/issues .\n\n
    </string>
    <string name="notification_server_starting">Starting at %s</string>
    <string name="notification_title">FTP Server is running</string>
    <string name="notification_text">at %s</string>
    <string name="notification_stop_text">Stop server</string>
    <string name="nsd_servername_postfix">FTP Server</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
    <string name="feedback">Send feedback</string>
    <string name="about">About</string>
    <string name="autoconnect_label">Autoconnect settings...</string>
    <string name="autoconnect_summary">Select the wifi networks on which to autoconnect</string>
    <string name="autoconnect_error_enable_wifi_for_access_points">
        Enable wifi to get list of access points
    </string>
    <string name="demo_while_paid_dialog_title">
        Demo started while paid version is installed
    </string>
    <string name="demo_while_paid_dialog_message">
        Thank you for supporting the development!\n\n
        You are trying to start the demo version while the paid version
        is installed. To insure optimal operation we ask you to remove
        the demo version and only start the paid version.
    </string>
    <string name="storage_warning">
        Warning: storage is not available. You may want to unmount it.
    </string>
    <string name="widget_name">FTP Server Widget</string>
    <string name="notif_settings_text">Settings</string>
    <string name="app_copyright">Copyright 2012 - 2017</string>
    <string name="app_url" translatable="false">
        https://ppareit.github.io/swiftp/
    </string>
    <string name="about_license_title">License</string>
    <string name="about_license_name">GNU GPL3</string>
    <string name="about_license_url" translatable="false">
        https://www.gnu.org/licenses/gpl-3.0.en.html
    </string>
    <string name="about_description_title">Description</string>
    <string name="about_description_text">
        FTP Server (SwiFTP) allows you to run an ftp server on your android device.
    </string>
    <string name="about_libraries_title">Libraries</string>
    <string name="about_contributor_title">Contributors</string>
    <string name="about_contributor_list" translatable="false">
        Dave Revell, Alexander Friesen, tescott425, Peng Fei, MadMaverick9, j3l11234,
        Sergey Kondakov, Tianhao Wu, Lorenzo M, Naofumi Fukue, Valerio Bozzolan,
        Thomas Löwe, Mladen Pejaković, valentind44, Ashutosh Gangwar, Nicoss, Poussinou,
        Timotheos Constambeys, chankruze, Waldemar Stoczkowski, Terry Hooper,
        Birgit Niemegeers
    </string>
    <string name="app_theme">Theme...</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="light_theme">Light Theme</string>
    <string name="mixed_theme">Mixed Theme</string>
    <string name="unable_to_start_mail_client">Unable to start mail client to send feedback.</string>
    <string name="use_english">Please use clear English!</string>
    <string name="request_coarse_location_dlg_title">Request permission for location</string>
    <string name="request_coarse_location_dlg_message">
        An application that knows the current access point can deduce the location of the device.
        As such the location permission is needed. This permission is only needed if you want to
        automatically start the server if it connects to a particular wifi access point.
        Needless to say that this application does not use the location information.\n\n
        If you don\'t grant this permission, the app will still work,
        you just won\'t be able to automatically connect.
    </string>
    <string name="unable_to_proceed_no_permissions">Unable to proceed without the needed permissions, shutting down</string>
    <string name="manage_users_label">Manage users...</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="user_exists_error">Another user with same username already exists!</string>
    <string name="confirm_delete_message">Delete user \'%1$s\'?</string>
    <string name="notice_cant_read_write">Notice that we can\'t read/write in this folder.</string>
    <string name="notice_cant_write">Notice that we can\'t write in this folder, reading will work. Writing in sub folders might work.</string>
    <string name="manage_users_no_users">No users available, create a user.</string>
    <string name="manage_users_multiple_users">Multiple users available, see list.</string>
    <string name="gui_settings_label">Appearance...</string>
    <string name="show_notification_icon_summary">Show the notification icon while the server is running</string>
    <string name="show_notification_icon">Show notification icon</string>
    <string name="auto_connect_stop_server_remove_from_list">
        Stopping FTP Server while connected to a wifi network we automatically connected to. Removing this wifi network from the preferences
    </string>
    <string name="write_external_storage_old_android_version_summary">On these devices, all store is available using the file hierarchy.</string>
    <string name="app_name">SIM_APP_TOUCHLESS</string>
    <string name="ingresarPatente">Ingresar patente</string>
    <string name="Patente">XXKD43</string>
    <string name="sinInfo">Sin información</string>
    <string name="viajeIniciado">Viaje no iniciado</string>
    <string name="empresa">empresa</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="solicitud">Solicitud Adicional</string>
    <string name="channel_name">channel_name_01</string>
    <string name="TipoEvento">Evento</string>
    <string name="action_settings">Settings</string>
    <string name="pref_WiFiClientIp">WiFiClientIp</string>
    <string name="pref_GroupOwnerAddress">GroupOwnerAddress</string>
    <string name="pref_ServerBoolean">ServerBoolean</string>
    <string name="fullscreen_ad_unit_id">ca-app-pub-6910223592682604/8991622777</string>
    <string name="banner_ad_unit_id">ca-app-pub-6910223592682604/2363084377</string>
    <string name="enable_p2p_button">P2P On/Off</string>
    <string name="discover_peers_button">Discover</string>
    <string name="connect_peer_button">Conectar</string>
    <string name="disconnect_peer_button">Desconectar</string>
    <string name="get_file_button">Enviar</string>
    <string name="empty"></string>
    <string name="yes">si</string>
    <string name="no">no</string>
    <string name="client_text">This device will act as a client. Click on Gallery button to pick a local(stored) file</string>
    <string name="empty_message">Buscando dispositivos...</string>
    <string name="p2p_off_warning">Debe activar la red WIFI.</string>
    <string name="group_owner_text">"Am I the Group Owner? "</string>
    <string name="label_me">Sincronizar con despacho.</string>
    <string name="TextoSinc">Escoja un dispositivo para conectar.</string>
    <string name="label_peers">Dispositivos disponibles</string>
    <string name="inicioSesion">Iniciar sesión</string>
    <string name="ingresoPatenteCancha">Ingrese patente y seleccione cancha</string>
    <string name="ingresar">Ingresar</string>
    <string name="textOrigen">ORIGEN: </string>
    <string name="VERSION_PATENTE">SIM-F7001 (v1.1.4)</string>
    <string name="VERSION_MAINACTIVITY">SIM-F9001 (v1.1.1)</string>
    <string name="VERSION_EVENTO">SIM-F7003 (v1.1.2)</string>
    <string name="VERSION_DESTINOS">SIM-F7004 (v1.1.2)</string>
    <string name="VERSION_COMPARTIR">SIM-F7005 (v1.1.2)</string>
    <string name="patente_lbl">Patente:</string>
    <string name="conductor_lbl">Conductor:</string>
    <string name="btn_ver_detalle">VER DETALLE</string>
    <string name="proveedor">Proveedor</string>
    <string name="numero_asicam">Asicam:</string>
    <string name="transportista">Transportista</string>
    <string name="guia_lbl">Guía:</string>
</resources>