<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
    android:id="@+id/device_detail_container"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/details_view"
        android:visibility="visible">
        <LinearLayout
            android:orientation="horizontal"

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_connect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_radius_ot"
                android:text="@string/connect_peer_button" />

            <Button
                android:id="@+id/btn_disconnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_radius_ot"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/disconnect_peer_button" />

            <Button
                android:id="@+id/btn_start_client"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_radius_ot"
                android:text="@string/get_file_button"
                android:visibility="gone" />
        </LinearLayout>

</LinearLayout>

