<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".layout.ingreso_patente">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="97dp"
        android:background="@color/toolbar_background"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioButton
        android:id="@+id/rdbConectado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        style="@style/radionbutton"
        android:layout_marginBottom="32dp"
        android:checked="false"
        android:clickable="false"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="@+id/toolbar" />

    <EditText
        android:id="@+id/edtPatente"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"
        android:ems="10"
        android:hint="@string/Patente"
        android:inputType="textCapCharacters"
        android:maxLength="6"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPatente">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            android:padding="0dp">

            <Button
                android:id="@+id/btnIngresar"
                android:layout_width="match_parent"
                android:layout_height="79dp"
                android:background="@color/button_active"
                android:enabled="true"
                android:text="@string/ingresarPatente"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/tvVersionPatente"
                style="@style/txtVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingTop="4dp"
                android:paddingRight="15dp"
                android:paddingBottom="4dp"
                android:text="@string/VERSION_PATENTE" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/txInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="33dp"
        android:text="@string/sinInfo"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toEndOf="@+id/rdbConectado" />

    <TextView
        android:id="@+id/textView6"
        style="@style/textViewIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/ingresarPatente"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />


</androidx.constraintlayout.widget.ConstraintLayout>