<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/textlinesbottom"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:paddingTop="10dp"
        android:paddingRight="25dp"
        android:paddingBottom="25dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/label_me"
            android:textColor="#34495e"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:text="@string/TextoSinc"
            android:textColor="#34495e"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:gravity="center_vertical"
        android:background="@android:color/holo_blue_light" />

    <!-- Self information -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="?android:attr/listPreferredItemHeight"
        android:background="?android:attr/activatedBackgroundIndicator"
        android:padding="3dip">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/my_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|left|center_vertical"
                android:paddingLeft="22dp"
                android:paddingRight="22dp"
                android:text="Nombre dispositivo"
                android:textColor="#34495e"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <!-- <TextView
                android:id="@+id/my_status"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:ellipsize="marquee"
                android:singleLine="true" />-->

            <TextView
                android:id="@+id/tvNombre"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/ic_patente_p"
                android:gravity="center|left"
                android:shadowColor="#34495e"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:gravity="center_vertical"
        android:background="@android:color/holo_blue_light" />

    <!-- Available peers -->
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingLeft="25dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/label_peers"
        android:textColor="#34495e"
        android:textStyle="bold" />

    <ListView
        android:id="@id/android:list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:drawSelectorOnTop="false"
        android:paddingLeft="25dp"
        android:paddingRight="25dp" />

    <TextView
        android:id="@id/android:empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|fill_horizontal|top"
        android:paddingLeft="25dp"
        android:text="@string/empty_message" />

</LinearLayout>
