<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".layout.MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:background="#283847"
        android:gravity="center"
        android:text="CONVECTOR"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:background="@color/toolbar_background"
        android:minHeight="?attr/actionBarSize"
        android:padding="0dp"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <RadioButton
        android:id="@+id/rdbConectadoM"
        style="@style/radionbutton"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:checked="false"
        android:clickable="false"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <ImageButton
        android:id="@+id/imgSinc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:background="@android:color/transparent"
        android:padding="4dp"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/rdbConectadoM"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:srcCompat="@drawable/ic_hostpot" />

    <ImageButton
        android:id="@+id/imgShared"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@android:color/transparent"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:srcCompat="@drawable/ic_shared" />

    <TextView
        android:id="@+id/tx_viaje_iniciado"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:background="#5F880E"
        android:gravity="center"
        android:text="@string/viajeIniciado"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/toolbar2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPatente" />

    <TextView
        android:id="@+id/txEmpresa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/empresa"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tx_viaje_iniciado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tvPatente"
        app:layout_constraintTop_toTopOf="@+id/toolbar2" />

    <TextView
        android:id="@+id/tvPatente"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/patente_radius"
        android:drawableLeft="@drawable/ic_patente"
        android:drawablePadding="10dp"
        android:gravity="center|center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/Patente"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_viaje_iniciado"
        app:tabMinWidth="120dp"
        app:tabMode="scrollable"
        app:tabTextColor="@android:color/white" />




    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_launcher_round" />

    </androidx.viewpager.widget.ViewPager>

    <ScrollView
        android:id="@+id/srvSinOt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/viewPager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tabLayout">

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        app:backgroundTint="@android:color/holo_orange_dark"
        app:layout_constraintBottom_toTopOf="@+id/tx_version_mainactivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_refresh" />

    <TextView
        android:id="@+id/tx_version_mainactivity"
        style="@style/txtVersion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/VERSION_MAINACTIVITY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSolicitudAdicional"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:text="@string/solicitud"
        android:textColor="#009688"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tx_version_mainactivity"
        app:layout_constraintEnd_toStartOf="@+id/fabUpdate"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_sinOT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="NO HAY OT DISPONIBLE"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnSolicitudAdicional"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/srvSinOt"
        app:layout_constraintTop_toTopOf="@+id/toolbar2" />

    <TextView
        android:id="@+id/tv_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Favor actualizar o informar"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sinOT" />

</androidx.constraintlayout.widget.ConstraintLayout>